--- a/spring-la-mia-pizzeria-crud/src/main/resources/templates/fragments/headerFragment.html
+++ b/spring-la-mia-pizzeria-crud/src/main/resources/templates/fragments/headerFragment.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <header th:fragment="headerFragment">
-    <nav class="navbar navbar-expand-lg bg-black">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-black">
         <div class="container-fluid">
           <a class="navbar-brand text-white">DaLuca</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,10 +11,20 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-white" aria-current="page" th:href="@{/pizzeria/}">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Pizze</a>
+              <li>
+                <a class="nav-link text-white" th:href="@{/pizzeria/create}">Create</a>
+              </li>
+              <li class=" nav-item ms-0 ms-lg-5">
+                <div class="d-flex justify-content-between">
+                  <form th:action="@{/pizzeria/}" method="get">
+                    <div class="input-group">
+                      <input name="keyword" th:value="${keyword}" class="form-control" type="search" placeholder="Inserisci nome pizza" aria-label="Inserisci nome pizza">
+                      <button class="btn btn-primary" type="submit"></button>
+                    </div>
+                  </form>
+                </div>
               </li>
             </ul>
           </div>
