--- a/spring-la-mia-pizzeria-crud/src/main/resources/templates/fragments/headerFragment.html
+++ b/spring-la-mia-pizzeria-crud/src/main/resources/templates/fragments/headerFragment.html
@@ -21,7 +21,7 @@
                   <form th:action="@{/pizzeria/}" method="get">
                     <div class="input-group">
                       <input name="keyword" th:value="${keyword}" class="form-control" type="search" placeholder="Inserisci nome pizza" aria-label="Inserisci nome pizza">
-                      <button class="btn btn-primary" type="submit"></button>
+                      <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
                     </div>
                   </form>
                 </div>
