--- a/spring-la-mia-pizzeria-crud/src/main/resources/templates/fragments/headFragment.html
+++ b/spring-la-mia-pizzeria-crud/src/main/resources/templates/fragments/headFragment.html
@@ -4,6 +4,7 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.4.2/css/all.min.css}" />
     <title>Home</title>
 
     <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css}" />
