--- a/spring-la-mia-pizzeria-crud/src/main/resources/templates/index.html
+++ b/spring-la-mia-pizzeria-crud/src/main/resources/templates/index.html
@@ -17,6 +17,13 @@
                 <h4 class="mt-3">Vasta scelta di pizze da provare, scegli quella che ti rappresenta di più!</h4>
             </div>
 
+                <th:block th:if="${successMessage != null}">
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        <span th:text="${successMessage}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                </th:block>
+
             <div class="mt-5" th:if="${list.isEmpty()}">
                 <p>La lista è vuota</p>
             </div>
@@ -51,7 +58,9 @@
                             <td th:text="${pizza.url}"></td>
                             <td th:text="${pizza.prezzo + ' &euro;'}"></td>
                             <td class="text-center">
-                                <a class="btn btn-primary" th:href="@{/pizzeria/{id}(id=${pizza.id})}">Dettagli</a>
+                                <a class="btn btn-outline-info" th:href="@{/pizzeria/{id}(id=${pizza.id})}" title="Dettagli">
+                                    <i class="fas fa-pizza-slice"></i>
+                                </a>                                
                             </td>
                         </tr>
                     </tbody>
